--- a/templates/views/addnote.hbs
+++ b/templates/views/addnote.hbs
@@ -22,7 +22,7 @@
 
         <input type="submit" value="Submit">
         
-        <script src="/js/app.js"></script>
+        <script src="/js/addnote.js"></script>
     </form> 
 </body>
 </html>
