--- a/templates/views/notes.hbs
+++ b/templates/views/notes.hbs
@@ -42,7 +42,7 @@
     <!-- JavaScript Files -->
     <script src="/js/createNote.js"></script>
     {{!-- <script src="/js/readNotes.js"></script> --}}
-    <script src="/js/updateNote.js"></script>
-    <script src="/js/deleteNote.js"></script>
+    <script src="/js/editnote.js"></script>
+    <script src="/js/deletenote.js"></script>
 </body>
 </html>
