--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,3 @@
 <header>
-  <h1>{{title}}</h1>
-  
-  <a href="/"> Notes </a>
-  <a href="/about"> About </a>
-  <a href="/help"> Help </a>
+  <h1>Quick Notes</h1>
 </header>
