--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,147 @@
-*{
-  background-color: aquamarine;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
+}
+
+.main-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #0a0212, #95bdf8);
+  color: #fff;
+  padding: 4% 10%;
+}
+
+header {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 16px;
+  margin-bottom: 48px;
+  padding-left: 0%;
+}
+
+#noteForm {
+  display: flex;
+  flex-direction: column;
+  min-width: 550px;
+  max-width: 650px;
+  margin: 0 auto;
+  margin-bottom: 80px;
+  border: 1px solid #fff;
+  padding: 15px;
+  border-radius: 8px;
+  background-color: rgba(233, 68, 68, 0.1);
+}
+
+#noteForm input[type="text"],
+#noteForm textarea {
+  margin-bottom: 20px;
+}
+#noteForm input[type="checkbox"] {
+  align-self: flex-start;
+  margin-bottom: 10px;
+}
+
+#noteForm button[type="submit"] {
+  align-self: flex-end;
+  margin-top: 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 10px 20px;
+}
+
+#noteForm button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+#notesGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.note {
+  background-color: rgba(175, 27, 27, 0.1);
+  padding: 20px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.note h2 {
+  margin-bottom: 10px;
+}
+
+.note p {
+  margin-bottom: 10px;
+}
+
+.note .editBtn,
+.note .deleteBtn {
+  align-self: flex-end;
+  margin-left: 10px;
+  background-color: #008cba;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.note .deleteBtn {
+  background-color: #f44336;
+}
+
+.note .editBtn:hover,
+.note .deleteBtn:hover {
+  opacity: 0.8;
+}
+
+#pagination {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#pagination a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 10px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  background-color: #4caf50;
+}
+
+#pagination a:hover {
+  background-color: #45a049;
+}
+
+#pagination span {
+  color: #ccc;
+}
+
+footer {
+  color: #ffffff;
+  text-align: center;
+  padding: 16px 0;
+  margin-top: 20px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
