--- a/templates/views/notes.hbs
+++ b/templates/views/notes.hbs
@@ -36,7 +36,7 @@
     <!-- Pagination Controls -->
 <div id="pagination">
     {{#if previousPage}}
-    <a href="/notes?page={{previousPage}}&limit=6">Previous</a>
+    <a href="/?page={{previousPage}}&limit=6">Previous</a>
     {{else}}
     <span>Previous</span>
     {{/if}}
@@ -44,7 +44,7 @@
     Page {{currentPage}}
 
     {{#if nextPage}}
-    <a href="/notes?page={{nextPage}}&limit=6">Next</a>
+    <a href="/?page={{nextPage}}&limit=6">Next</a>
     {{else}}
     <span>Next</span>
     {{/if}}
