--- a/templates/views/notes.hbs
+++ b/templates/views/notes.hbs
@@ -53,7 +53,7 @@
 </div>
 
     <!-- JavaScript Files -->
-    <script src="/js/createNote.js"></script>
+    <script src="/js/createnote.js"></script>
     <script src="/js/editnote.js"></script>
     <script src="/js/deletenote.js"></script>
 </body>
